objects/AW_SurveySetting__mdt.object
<CustomObject>
    <description>This object is created to store Survey related settings.</description>
    <fields>
        <fullName>AW_CommunityNetworkID__c</fullName>
        <description>to store Community ID for creating Survey.</description>
        <label>Community Network ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CommunityURL__c</fullName>
        <description>This field is used to store Liberty Client Portal community url.</description>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AW_SurveyID__c</fullName>
        <description>to store Survey ID</description>
        <label>Survey ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Survey Setting</label>
    <pluralLabel>Survey Settings</pluralLabel>
</CustomObject>